# Synapse

./: README.md  SESSION-START.md  convert_imatrix_gguf_to_dat.py
.github/: copilot-instructions.md
common/: common.cpp  common.h  hybrid-manifest.cpp  hybrid-manifest.h
docker/: README.md
docs/: cpu-arm-optimization.md
docs/backend/: RKNPU2.md
docs/debug/: phase3-rknpu-offload-findings.md  rknpu-request2-investigation-log.md
docs/npu/: ENVIRONMENT.md  GETTING_STARTED.md  PERFORMANCE.md  README.md  TESTING.md
docs/prompts/: README.md  master-roadmap-orchestrator.md  phase-2-policy-unification.md  phase-3-rk3588-validation.md  phase-4-artifact-cache-strategy.md  phase-5-hybrid-quant-decision-gate.md  rock5-session-pack.md
docs/prompts/rock5/: README.md  hybrid-runtime-benchmark.md  manifest-tuning.md  phase-advance-decision.md  strict-mode-and-fallback-audit.md
examples/llama-bench/: llama-bench.cpp
examples/server/: server-context.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml-backend.h
ggml/src/: CMakeLists.txt  ggml-backend-impl.h  ggml-backend.cpp  ggml-cuda.cu  ggml-rknpu2-adapter.cpp
ggml/src/ggml-cuda/: cpy-utils.cuh
ggml/src/ggml-rknpu2/: CMakeLists.txt  NOTICE.md  README.md  ggml-rknpu2.cpp  rknpu2-allocation.cpp  rknpu2-configuration.cpp  rknpu2-configuration.h  rknpu2-quantization.cpp
ggml/src/iqk/: iqk_common.h
ggml/src/iqk/fa/: iqk_fa_templates.h
include/: llama.h
src/: llama-build-context.cpp  llama-load-tensors.cpp  llama-model-loader.cpp  llama-model.cpp  llama-vocab.cpp  llama.cpp
tests/: test-hybrid-manifest.cpp
tests/fixtures/hybrid-manifest/examples/: strict-mode-validation-expected-pass.json
tests/fixtures/hybrid-manifest/invalid/: strict-mode-validation-expected-fail.json
tools/gguf/: add_thinking_token_alias.py
